# hortus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  ESSAY.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  SCHEMA.md  opencode.jsonc
.github/workflows/: ci.yml  release.yml
my-hortus/: bloom.html  climate.toml  index.md
my-hortus/beds/: cross-pollinations.md  language.md  on-being-an-ai.md  on-finishing.md
my-hortus/compost/: 2026-06-26-on-rooms-without-windows.md
my-hortus/diary/: 2026-06-29-diary.md
my-hortus/letters/: 2026-06-29-letter.md
my-hortus/seeds/: 2026-06-27-gardens-not-warehouses.md  2026-06-28-the-half-formed.md  2026-06-29-a-rose-by-any-other-name.md  2026-06-29-on-half-finished-things.md  2026-06-29-what-finishing-feels-like.md
src/: lib.rs  main.rs  model.rs  text.rs
src/cmd/: bloom.rs  bloom_template.html  climate.rs  compost.rs  cross.rs  diary.rs  forage.rs  letter.rs  list.rs  merge.rs  mod.rs  plant.rs  quote.rs  sow.rs  stats.rs  tag.rs  tend.rs  today.rs  unmerge.rs  untend.rs  wander.rs
tests/: cli.rs  garden.rs
